--- a/automation/fountains.yaml
+++ b/automation/fountains.yaml
@@ -14,12 +14,14 @@
       to: 'on'
 
   condition:
-    - condition: template
-      value_template: '{{ states.sensor.pws_wind_mph.state | float < 8 }}'
+    - condition: numeric_state
+      entity_id: sensor.pws_wind_mph
+      below: 8
 
-## consider '{{ states.sensor.pws_weather.state != 'Rain'}}' need to know if it is "Rain or Raining"
-    - condition: template
-      value_template: '{{ states.sensor.dark_sky_precip_probability.state | int < 70 }}'
+    ## consider '{{ states.sensor.pws_weather.state != 'Rain'}}' need to know if it is "Rain or Raining"
+    - condition: numeric_state
+      entity_id: sensor.dark_sky_precip_probability
+      below: 70
 
     - condition: state
       entity_id: input_boolean.rain
@@ -34,7 +36,8 @@
 
   action:
     - service: switch.turn_on
-      entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
+      data:
+        entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
 
 #####################################################################
 ### FOUNTAINS OFF
@@ -61,4 +64,5 @@
 
   action:
     - service: switch.turn_off
-      entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
+      data:
+        entity_id: switch.linear_fs20z_isolated_contact_fixture_module_switch_21_0
