--- a/sensors/trackers.yaml
+++ b/sensors/trackers.yaml
@@ -1,4 +1,3 @@
-
 #####################################################################
 ### GOOGLE TRAVEL
 #####################################################################
@@ -50,23 +49,17 @@
     ricks_eta:
       friendly_name: "Rick's ETA"
       value_template: >-
-        {%- if states.sensor.rick_eta_home == None -%}
-            Unknown
-        {% elif is_state('sensor.rick_eta_home', '0') %}
-            Home
+        {% if is_state('sensor.rick_eta_home', '0') %}
+          Home
         {% else %}
-           {{ states('sensor.rick_eta_home') }}
+          {{ states('sensor.rick_eta_home') }}
         {% endif %}
 
-- platform: template
-  sensors:
     megs_eta:
       friendly_name: "Meg's ETA"
       value_template: >-
-        {%- if states.sensor.megs_eta_home == None -%}
-            Unknown
-        {% elif is_state('sensor.megs_eta_home', '0') %}
-            Home
+        {% if is_state('sensor.megs_eta_home', '0') %}
+          Home
         {% else %}
-           {{ states('sensor.megs_eta_home') }}
+          {{ states('sensor.megs_eta_home') }}
         {% endif %}
