--- a/automation/hvac_set_mode.yaml
+++ b/automation/hvac_set_mode.yaml
@@ -4,8 +4,9 @@
 
 - alias: hvac off during awesome weather
   trigger:
-    - platform: template
-      value_template: "{% if is_state('sensor.season', 'Awesome') %}true{% endif %}"
+    - platform: state
+      entity_id: sensor.season
+      to: 'Awesome'
 
   action:
     - service: climate.set_operation_mode
@@ -25,8 +26,9 @@
 - alias: hvac downstairs mode cool
   hide_entity: True
   trigger:
-    - platform: template
-      value_template: "{% if is_state('sensor.season', 'Summer') %}true{% endif %}"
+    - platform: state
+      entity_id: sensor.season
+      to: 'Summer'
 
   action:
     - service: climate.set_operation_mode
@@ -46,8 +48,9 @@
 - alias: hvac downstairs mode heat
   hide_entity: True
   trigger:
-    - platform: template
-      value_template: "{% if is_state('sensor.season', 'Winter') %}true{% endif %}"
+    - platform: state
+      entity_id: sensor.season
+      to: 'Winter'
 
   action:
     - service: climate.set_operation_mode
@@ -59,3 +62,68 @@
       entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2
       data:
         operation_mode: 'Heat'
+
+
+
+## Original config before Dale's fixes
+######################################################################
+#### HVAC MODES - SET OFF; Turn off the system if the weather is awesome!
+######################################################################
+#
+#- alias: hvac off during awesome weather
+#  trigger:
+#    - platform: template
+#      value_template: "{% if is_state('sensor.season', 'Awesome') %}true{% endif %}"
+#
+#  action:
+#    - service: climate.set_operation_mode
+#      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
+#      data:
+#        operation_mode: 'Off'
+#
+#    - service: climate.set_operation_mode
+#      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2
+#      data:
+#        operation_mode: 'Off'
+#
+######################################################################
+#### SET COOL
+######################################################################
+#
+#- alias: hvac downstairs mode cool
+#  hide_entity: True
+#  trigger:
+#    - platform: template
+#      value_template: "{% if is_state('sensor.season', 'Summer') %}true{% endif %}"
+#
+#  action:
+#    - service: climate.set_operation_mode
+#      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
+#      data:
+#        operation_mode: 'Cool'
+#
+#    - service: climate.set_operation_mode
+#      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2
+#      data:
+#        operation_mode: 'Cool'
+#
+######################################################################
+#### SET HEAT
+######################################################################
+#
+#- alias: hvac downstairs mode heat
+#  hide_entity: True
+#  trigger:
+#    - platform: template
+#      value_template: "{% if is_state('sensor.season', 'Winter') %}true{% endif %}"
+#
+#  action:
+#    - service: climate.set_operation_mode
+#      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_18_2
+#      data:
+#        operation_mode: 'Heat'
+#
+#    - service: climate.set_operation_mode
+#      entity_id: climate.2gig_technologies_ct101_thermostat_iris_cooling_1_24_2
+#      data:
+#        operation_mode: 'Heat'
